# Autonomous-Support-Resolution-Agent-

./: .gitignore  README.md
AI-Ticket-Agent-master/: .gitignore  DASHBOARD_GUIDE.md  README.md  SLACK_SETUP.md  dashboard.py  env.example  init_database.py  pyproject.toml  run.py
AI-Ticket-Agent-master/ai_ticket_agent/: __init__.py  agent.py  database.py  models.py  prompt.py
AI-Ticket-Agent-master/ai_ticket_agent/sub_agents/: __init__.py
AI-Ticket-Agent-master/ai_ticket_agent/sub_agents/escalation/: __init__.py  agent.py
AI-Ticket-Agent-master/ai_ticket_agent/sub_agents/self_service/: __init__.py  agent.py
AI-Ticket-Agent-master/ai_ticket_agent/tools/: __init__.py  email_collector.py  email_sender.py  knowledge_base.py  notification_sender.py  problem_analyzer.py  resolution_tracker.py  slack_handlers.py  team_router.py  ticket_manager.py
AI-Ticket-Agent-master/tests/: create_test_ticket.py  test_agent_ticket_creation.py  test_agents.py  test_dashboard.py  test_slack_notifications.py  test_ticket_lifecycle.py
backend/: .env  audit_logger.py  database.py  main.py  models.py  react_agent.py  requirements.txt  seed_demo.py  support_agent.db  tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Layout.jsx  LogPanel.jsx  ReasoningView.jsx  StatCard.jsx  StatusBadge.jsx  TicketCard.jsx  ToolCallView.jsx
frontend/src/pages/: DashboardPage.jsx  LogsPage.jsx  TicketDetailPage.jsx  TicketsPage.jsx
