[project]
name = "ai-ticket-agent"
version = "0.1.0"
description = "Multi-Agent IT Support System using Google ADK for intelligent ticket routing and resolution."
authors = [
    { name = "AI Ticket Agent Team", email = "team@example.com" },
]
license = "Apache License 2.0"
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
google-adk = "^1.0.0"
google-genai = "^1.16.1"
python-dotenv = "^1.0.1"
slack-sdk = "^3.27.1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
streamlit = "^1.32.0"
plotly = "^5.18.0"
pandas = "^2.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api" 